# glut-megaman-game

./: .gitignore  CMakeLists.txt  Makefile.mak  Model.h  Object.h  README.md  Speed.h  megaman.cpp
Models/Enemies/blaster/: blaster.mtl
Models/Enemies/horizontalAirPlane/: horizontalAirPlane.mtl
Models/Enemies/horizontalDrone/: horizontalDrone.mtl
Models/Enemies/jumperEnemy/: jumperEnemy.mtl
Models/Enemies/met/: idleMet.mtl
Models/Enemies/metalMet/: metalMetHidden.mtl
Models/Enemies/rounderingEnemy/: rounderingEnemy.mtl
Models/Environment/background/: city.mtl
Models/Environment/easterEgg/: ancientFace.mtl  glassOfWine.mtl
Models/Environment/ground/: endBoard.mtl  metalBlock.mtl  movingBlock.mtl
Models/PlayerModel/: MegamanX.mtl  megmanEXE.mtl
Models/PlayerModel/AnimationObjects/: megamanTes.mtl
Models/PlayerModel/animations/: shoot.mtl
Models/PlayerModel/animations/animationFiles/: Punching.fbx  Running.fbx  Stabbing.fbx
Models/PlayerModel/animations/chargShootAnimation/: chargShoot.mtl  chargedShoot.mtl
Models/PlayerModel/animations/idleAnimation/: idle.mtl
Models/PlayerModel/animations/jumpingAnimation/: jumping.mtl
Models/PlayerModel/animations/runningAnimation/: running.mtl
Models/PlayerModel/animations/sadIdleAnimation/: sadIdle.mtl
Models/PlayerModel/animations/shootAnimation/: shoot.mtl  shooting.mtl  shooting2.mtl
classes/: Camera.h  Collision.h  EnemiesImport.h  Enemy.h  EnemyDepth.h  EnemyHorizontal.h  EnemyJumping.h  EnemyVertical.h  Fire.h  FloatingBlocks.h  FloatingBlocksHor.h  Menu.h  Model.h  Object.h  Player.h  Scene.h  Sounds.h  Speed.h  Wall.h  WallWithCollider.h  fire.h  player.h
classes/Enemies/: EnemiesImport.h  Enemy.h  EnemyDepth.h  EnemyHorizontal.h  EnemyJumping.h  EnemyMet.h  EnemyVertical.h
